# disaster-readiness

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Makefile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  random_route_output.geojson  readme.md  test.py
.do/: app.yaml
ai/classification/: README.md
ai/classification/notebook/: classification_model.ipynb
ai/classification/scripts/: run_inference.py
ai/classification/src/: test_inference.py
ai/imputation/: README.md
ai/imputation/data/: pj_hotspots.csv
ai/imputation/models/: vulnerability_model.joblib
ai/imputation/notebook/: imputation_model.ipynb
ai/imputation/scripts/: run_imputation.py  visualize_results.py
ai/redaction/: README.md
ai/redaction/notebook/: plate_detection.ipynb
ai/redaction/scripts/: run_redaction.py
apps/api/: Dockerfile  README.md
apps/frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.js
apps/frontend/public/: pj_neighbourhood.geojson
apps/frontend/scripts/: syncShelters.js
apps/frontend/src/: App.jsx  index.css
apps/worker/: Dockerfile
data/samples/classification_inference/: README.md
disaster-map/: package-lock.json  package.json
disaster-map/src/: App.jsx
docs/: demo_vid.txt
docs/screenshots/: README.md
infra/docker/: README.md  api.Dockerfile  docker-compose.yml  frontend.Dockerfile  frontend.nginx.conf  worker.Dockerfile
pj_mvp_data/: pj_roads.shp  pj_roads.shx
routing/: README.md  __init__.py  test.py
routing/artifacts/: pj_shelters.csv  random_route_output.geojson
routing/data/: .gitignore  convert_shp_to_geojson.py  cost.py  index.py  load_postgres.py  map.py  osm.py  osm_extract.py  pj_boundary.geojson  postgres.py  sample.py  sanity.py  shelter.py  topology.py
routing/scripts/: generate_grid.py  import_roads.py  run_accessibility.py  verify_sql.py
routing/sql/: __init__.py  accessibility.py  change.py  contract.py  edge.py  engine.py  hazard.py  output.py  pgr.py  radius.py  route_change.py  snapping.py  update.py  updater.py
routing/testing/: edge_cases.py  random_route_output.py  scenario_generator.py
scripts/: generate_grid.py  import_road_edges.py  run_accessibility_compute.py  run_classification_inference.py  verify_routing_sql_integration.py
supabase/: README.md  config.toml  seed.sql
supabase/migrations/: 20260301172229_remote_schema.sql  20260301173126_remote_schema.sql  20260304160032_add_images_bucket.sql  20260305143000_add_routing_compatibility_views.sql  20260306161000_harden_routing_compat_objects.sql  20260306170000_indexes_rls_functions.sql  20260307180000_cleanup_redundant_tables.sql  20260308134636_remote_schema.sql  20260310000000_readiness_engine_functions.sql
supabase/scripts/: initialize_readiness.py
supabase/snippets/: Compute readiness.sql  Extended hazard.sql  Low readiness.sql  Severe hazard.sql  Update readiness scores.sql
tests/ai/: conftest.py  test_inference.py
tests/api/: conftest.py  test_core_endpoints.py  test_health.py  test_image_processing.py  test_orchestration.py  test_routing_sql_backend.py
tests/e2e/: conftest.py  test_readiness_engine.py
tests/worker/: conftest.py  test_jobs.py
(+136 files in other folders)
