[project]
name = "disaster-readiness"
version = "0.1.0"
description = "Hyperlocal Disaster Readiness monorepo"
authors = [
    {name = "jay",email = "hu.jay.hu.jay@gmail.com"}
]
readme = "readme.md"
requires-python = "^3.11"
dependencies = [
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
